<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/logInFragment">

    <fragment
        android:id="@+id/logInFragment"
        android:name="com.udacity.shoestore.login.LogInFragment"
        android:label="@string/title_login">
        <action
            android:id="@+id/action_logInFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.welcome.WelcomeFragment"
        android:label="@string/title_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.instruction.InstructionFragment"
        android:label="@string/title_instruction">
        <action
            android:id="@+id/action_instructionFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.list.ShoeListFragment"
        android:label="@string/title_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
        <argument
            android:name="shoeDetail"
            app:argType="com.udacity.shoestore.models.Shoe"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.detail.ShoeDetailFragment"
        android:label="@string/title_shoe_detail" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>
</navigation>