<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_shoe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_shoe_name"
                    style="@style/text_16b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/card_shoe_name"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/tvSize"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_size"
                    style="16b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/card_shoe_size_ex"
                    android:textColor="@color/black"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_shoe_name"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tvSize"
                    style="@style/text_12n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/card_shoe_size"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_shoe_name"
                    app:layout_constraintEnd_toStartOf="@+id/tv_size"
                    app:layout_constraintStart_toEndOf="@+id/tv_shoe_name" />

                <TextView
                    android:id="@+id/tv_company"
                    style="@style/text_12n"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/card_company"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_shoe_name" />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/text_12n"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/card_description"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</layout>